# FL-Transportation

./: README.md  data_preprocessing_geolife.py  download_dataset.sh  requirements.txt  rf_train.py
federated/iot/: README.md  client.py  pyproject.toml  server.py  utils.py
naive_approach/: emissions.py  main.py  nn_train.py  rf_train.py  standards.py  tree_train.py  tree_trained.joblib
utilities/: DatasetCreation_Inference.py
