[build-system]
requires = [
    "poetry==1.1.12",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sklearn-tmc"
version = "0.1.0"
description = "Federated training"
authors = [
    "Cláudia Brito <claudiavmbrito@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.8"
flwr = "^0.16.0"
scikit-learn = "^0.24.2"